--- a/src/index.html
+++ b/src/index.html
@@ -39,6 +39,8 @@
     <!-- js files will be automatically insert here -->
     <!-- endinject -->
 
+    <script src="storejs/store.min.js"></script>
+
     <!-- inject:partials -->
     <!-- angular templates will be automatically converted in js and inserted here -->
     <!-- endinject -->
