--- a/src/index.html
+++ b/src/index.html
@@ -42,6 +42,9 @@
     <!-- endinject -->
 
     <script src="storejs/store.min.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+    <!--<script src="../node_modules/angular-counter/js/angular-counter.js"></script>-->
 
     <!-- inject:partials -->
     <!-- angular templates will be automatically converted in js and inserted here -->
