--- a/src/index.html
+++ b/src/index.html
@@ -42,8 +42,8 @@
     <!-- endinject -->
 
     <script src="storejs/store.min.js"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
     <!--<script src="../node_modules/angular-counter/js/angular-counter.js"></script>-->
 
     <!-- inject:partials -->
